--- a/addons/Dexie.Syncable/package.json
+++ b/addons/Dexie.Syncable/package.json
@@ -71,7 +71,7 @@
   "homepage": "http://dexie.org",
   "peerDependencies": {
     "dexie": "^2.0.0-beta.7",
-    "dexie-observable": "^0.9.2 || ^1.0.0-beta"
+    "@prezentor/dexie-observable": "^0.9.2 || ^1.0.0-beta"
   },
   "devDependencies": {
     "dexie": "^2.0.4",
