--- a/addons/Dexie.Syncable/package.json
+++ b/addons/Dexie.Syncable/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "dexie-syncable",
+  "name": "@prezentor/dexie-syncable",
   "version": "1.0.0-beta.7",
   "description": "Addon to Dexie that makes it possible to sync indexeDB with remote databases.",
   "main": "dist/dexie-syncable.js",
